Fix: Add build step to properly escape and bundle frontend JavaScript

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "AI-driven fitness coaching application built on Cloudflare Workers",
   "main": "src/index.js",
   "scripts": {
-    "dev": "wrangler dev",
-    "deploy": "wrangler deploy",
+    "build": "node build-frontend.js",
+    "dev": "npm run build && wrangler dev",
+    "deploy": "npm run build && wrangler deploy",
     "db:create": "wrangler d1 create fitness-coach-db",
     "db:migrate": "wrangler d1 migrations apply fitness-coach-db",
     "db:migrate:local": "wrangler d1 migrations apply fitness-coach-db --local"
