--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,10 +25,11 @@ jobs:
         run: npm ci
       
       - name: Run database migrations
-        run: npx wrangler d1 migrations apply fitness-coach-db
+        run: npx wrangler d1 migrations apply fitness-coach-db --remote
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+        continue-on-error: false
       
       - name: Deploy to Cloudflare Workers
         run: npm run deploy
